--- a/Proyecto/plAIIgames/.settings/org.eclipse.core.resources.prefs
+++ b/Proyecto/plAIIgames/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//app/funciones.py=utf-8
+encoding//app/recomendacion.py=utf-8
 encoding//app/testeo.py=utf-8
